@@ -66,10 +66,6 @@ enum LIBESEDB_ACCESS_FLAGS
 /* Reserved: not supported yet */
 #define LIBESEDB_OPEN_READ_WRITE					( LIBESEDB_ACCESS_FLAG_READ | LIBESEDB_ACCESS_FLAG_WRITE )
 
-/* TODO deprecated remove after a while */
-#define LIBESEDB_FLAG_READ						LIBESEDB_ACCESS_FLAG_READ
-#define LIBESEDB_FLAG_WRITE						LIBESEDB_ACCESS_FLAG_WRITE
-
 /* The file types
  */
 enum LIBESEDB_FILE_TYPES
@@ -143,7 +139,8 @@ enum LIBESEDB_PAGE_FLAGS
 
 	LIBESEDB_PAGE_FLAG_IS_NEW_RECORD_FORMAT				= 0x00002000,
 	LIBESEDB_PAGE_FLAG_IS_SCRUBBED					= 0x00004000,
-	LIBESEDB_PAGE_FLAG_0x8000					= 0x00008000
+	LIBESEDB_PAGE_FLAG_0x8000					= 0x00008000,
+	LIBESEDB_PAGE_FLAG_0x10000					= 0x00010000
 };
 
 /* The page tag flags
